[package]
name = "rint"
version = "0.1.0"
edition = "2021"

[dependencies]
rint-core= { path="./rint-core" }
rint-client= { path="./rint-client" }
rint-server= { path="./rint-server" }
tokio = "1.28.0"
log = "0.4"
env_logger = "0.10.0"
protobuf = "2.28.0"
protobuf-codegen-pure = "2.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.4.0"
lazy_static = "1.4.0"
dhat = "0.3.2"
tokio-stream = "0.1"
clap = { version = "4.2.7", features = ["derive"] }
# serde_json is just for the example, not required in general
rand = "0.8.5"

[[bin]]
name="rint-server"
path="./rint-server/src/main.rs"

[[bin]]
name="rint-client"
path="./rint-client/src/main.rs"


[workspace]
members = [
    "rint-client",
    "rint-server",
    "rint-core"
]
default-members=[
    "rint-client",
    "rint-server"
]