[package]
name = "rint-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
rint-core =  { path = "../rint-core" }
tokio = "1.28.0"
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
rand = "0.8.5"
log = "0.4"
env_logger = "0.10.0"