[package]
name = "rint-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.3"
passwords = "3.1.9"
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
rand = "0.8.5"
rust-crypto = "^0.2"
winres = "0.1.12"
chrono = "0.4.20"
clipboard = "0.5.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
lz4_flex = { version = "0.10.0", default-features = false }
env_logger = "0.10.0"
clap = { version = "4.2.7", features = ["derive"] }
protobuf = "2.28.0"
protobuf-codegen-pure = "2.28.0"
bytes = "1.4.0"
[build-dependencies]
protobuf-codegen-pure = "2.28.0"
